--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-lazyload": "^1.3.1",
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.15.0",
+    "vue-yandex-metrika": "^1.8.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
