--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.24",
     "core-js": "^2.6.5",
+    "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.1",
     "vue-router": "^3.0.3",
@@ -25,8 +26,10 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "prerender-spa-plugin": "^3.2.1",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "vue-cli-plugin-prerender-spa": "^1.1.6",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
